# rocq-template

./: README.md  README.md.template  _CoqProject  _RocqProject  dune-project  project.opam  setup.sh
theories/: Test.v  dune
