opam-version: "OPAM_VERSION"
maintainer: "EMAIL"
version: "dev"

homepage: "https://github.com/GH_UNAME/PROJECT.git"
dev-repo: "git+https://github.com/GH_UNAME/PROJECT.git"
bug-reports: "https://github.com/GH_UNAME/PROJECT/issues"
doc: "https://GH_UNAME.github.io/PROJECT/"
license: ""

synopsis: "SYNOPSIS"
description: """
DESCRIPTION"""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "3.6"}
  "coq" {(>= "8.19.1")}
]

tags: [
]
authors: [
  "NAME"
]
